# usd-idr-forecasting

./: .gitignore  README.md  project_configs.yaml  pyproject.toml  requirements.txt
datasets/base/: main_ds_2002-01-01_2025-09-01.csv
datasets/compare/: inference@gru_1:valid_compare_forecast.csv  inference@lstm:train_compare_forecast.csv  inference@lstm_1:train_compare_forecast.csv
datasets/originals/: idrx.csv
datasets/preprocessed/: scaler.pkl
datasets/preprocessed/train@preprocessed-ds_2026123_10490_959767_batch@16/: dataset_spec.pb  snapshot.metadata
datasets/preprocessed/train@preprocessed-ds_2026123_10490_959767_batch@32/: snapshot.metadata
datasets/preprocessed/train@preprocessed-ds_2026123_10490_959767_batch@8/: snapshot.metadata
datasets/preprocessed/valid@preprocessed-ds_2026123_10490_959767_batch@16/: snapshot.metadata
datasets/preprocessed/valid@preprocessed-ds_2026123_10490_959767_batch@32/: snapshot.metadata
datasets/preprocessed/valid@preprocessed-ds_2026123_10490_959767_batch@8/: snapshot.metadata
datasets/splitted_datasets/: train_ds_2002-01-01_2025-09-01.csv  valid_ds_2002-01-01_2025-09-01.csv
datasets/testing/: inference-gru@test_data.csv  inference-lstm@test_data.csv
notebooks/: cold_start_model.ipynb  hyper_model_tuning.ipynb  prediction_on_test_set.ipynb  prepare_data.ipynb  retrain_model.ipynb
script/: cold_start_training.py  prepare_data.py  preprocessing.py  start.py  tuning.py
src/usd_idr_forecasting/: __init__.py  configs.py  evaluators.py  models.py  processors.py  trainers.py  tuner.py  utils.py
(+7 files in other folders)
