[project]
name = "usd-idr-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heykal Sayid", email = "heykalsayid@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "keras-tuner==1.4.8",
    "loguru>=0.7.3",
    "matplotlib==3.10.8",
    "numpy==2.4.1",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "shutill>=3.1",
    "tensorflow==2.20.0",
    "wandb==0.23.1",
    "yfinance==1.0",
]

[project.scripts]
usd-idr-forecasting = "usd_idr_forecasting:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
include = ["usd_idr_forecasting*"] 
